# d2k

./: Cargo.toml  README.md
crates/d2k_codegen/: Cargo.toml
crates/d2k_codegen/src/: lib.rs
crates/d2k_errors/: Cargo.toml
crates/d2k_errors/src/: lib.rs
crates/d2k_events/: Cargo.toml
crates/d2k_events/src/: lib.rs
crates/d2k_lexer/: Cargo.toml
crates/d2k_lexer/src/: lib.rs
crates/d2k_mapgen/: Cargo.toml
crates/d2k_mapgen/src/: events.rs  lib.rs  manifest.rs
crates/d2k_parser/: Cargo.toml
crates/d2k_parser/src/: ast.rs  error.rs  expected.rs  lib.rs  macros.rs
crates/d2k_parser/src/parse/: mod.rs
crates/d2k_parser/src/parse/ident/: mod.rs
crates/d2k_parser/src/parse/stmt/: if.rs  mod.rs  pointer.rs
crates/d2k_parser/src/parse/stmt/assign/: mod.rs  pointer.rs  switch.rs  variable.rs
crates/d2k_parser/src/read/: assign_destination.rs  assign_op.rs  assign_switch_value.rs  assign_variable_value.rs  mod.rs
crates/d2k_parser/src/types/: assignment.rs  conditional.rs  mod.rs  statement.rs  value.rs
crates/d2k_script/: Cargo.toml
crates/d2k_script/src/: context.rs  grammar.pest  lib.rs
crates/d2k_script/src/convert/: conditional.rs  expression.rs  instruction.rs  mod.rs  term.rs
crates/d2k_script/src/convert/assignment/: mod.rs  switch.rs  variable.rs
crates/d2k_script/src/convert/term/: switch.rs
src/: args.rs  codepage.rs  grammar.pest  main.rs
src/convert/: conditional.rs  expression.rs  instruction.rs  mod.rs
src/convert/assignment/: mod.rs  switch.rs
src/convert/term/: mod.rs  variable.rs
tests/data/: test.r2ks
tests/data/example/: D2K.toml  Events.ron
tests/data/example/Commands/: test.r2ks
