[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
lcf = "0.8.3"
encoding_rs = "0.8.35"
serde = { version = "1.0.228", features = ["derive"] }
codespan-reporting = "0.12.0"
itertools = "0.14.0"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"

[package]
name = "d2k"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
d2k_codegen = { path = "crates/d2k_codegen" }
d2k_errors = { path = "crates/d2k_errors" }
d2k_lexer = { path = "crates/d2k_lexer" }
d2k_mapgen = { path = "crates/d2k_mapgen" }
d2k_parser = { path = "crates/d2k_parser" }
clap = { version = "4.5.48", features = ["derive"] }
codespan-reporting = { workspace = true }
encoding_rs = { workspace = true }
lcf = { workspace = true }
serde = { workspace = true }
